--- a/WPF/Web/Views/AccommodationCard.xaml
+++ b/WPF/Web/Views/AccommodationCard.xaml
@@ -36,7 +36,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Border x:Name="borderHeader" Background="{StaticResource SoftGreen}" Grid.ColumnSpan="2" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Border x:Name="borderHeader" Background="{StaticResource SoftGreen}" Grid.ColumnSpan="2" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Center">
                 <TextBlock Grid.Row="0" FontSize="18" Foreground="Black" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Accommodation.Name}" FontWeight="DemiBold"/>
             </Border>
 
