--- a/WPF/Web/Views/RescheduleReservationModalDialog.xaml
+++ b/WPF/Web/Views/RescheduleReservationModalDialog.xaml
@@ -18,9 +18,28 @@
             <Setter Property="Margin" Value="0 0 10 0"/>
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
         </Style>
+
+        <Style x:Key="Title" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Margin" Value="0 10 0 10"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="ButtonText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="Margin" Value="5 0 0 0"/>
+        </Style>
+
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+        </Style>
     </UserControl.Resources>
 
-    <Border BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10" Background="White">
+    <Border BorderBrush="{StaticResource Green}" BorderThickness="2" Width="350" CornerRadius="10" Background="White">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -29,9 +48,8 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <Border Background="LightGray" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10"/>
-            <TextBlock Grid.Row="0" FontSize="20" HorizontalAlignment="Center" Margin="0 10 0 10"
-                           Text="Reschedule reservation date"/>
+            <Border Background="{StaticResource Green}" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Center"/>
+            <TextBlock Grid.Row="0" Text="Reschedule reservation date" Style="{StaticResource Title}"/>
 
 
             <Label Grid.Row="1" FontSize="18" Content="{Binding Reservation.Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
@@ -67,14 +85,14 @@
             <Button x:Name="buttonCancel" Grid.Row="3" Margin="10" HorizontalAlignment="Left" Click="ButtonCancelClick">
                 <WrapPanel Margin="10">
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource CaneclIcon}"/>
-                    <TextBlock Text="Cancel"/>
+                    <TextBlock Text="Cancel" Style="{StaticResource ButtonText}"/>
                 </WrapPanel>
             </Button>
 
             <Button Grid.Row="3" Margin="10" HorizontalAlignment="Right" Click="ButtonConfirmClick">
                 <WrapPanel Margin="10">
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource ConfirmIcon}"/>
-                    <TextBlock Text="Confirm"/>
+                    <TextBlock Text="Confirm" Style="{StaticResource ButtonText}"/>
                 </WrapPanel>
             </Button>
 
