--- a/WPF/Tablet/Views/AddBegginingDateTime.xaml
+++ b/WPF/Tablet/Views/AddBegginingDateTime.xaml
@@ -4,9 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        xmlns:cmd="clr-namespace:BookingApp.WPF.Utils.Commands"
         xmlns:local="clr-namespace:BookingApp.WPF.Tablet.Views"
         mc:Ignorable="d"
                Title="AddBegginingDateTimeWindow" Height="150" Width="350" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Window.CommandBindings>
+        <CommandBinding Command="cmd:RoutedCommands.Cancel" CanExecute="Cancel_CanExecute" Executed="Cancel_Executed"/>
+        <CommandBinding Command="cmd:RoutedCommands.Confirm" CanExecute="Add_CanExecute" Executed="Add_Executed"/>
+    </Window.CommandBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -25,7 +30,7 @@
         <TextBox Grid.Row="1" Margin="5,0,5,0" FontSize="18" VerticalAlignment="Center" Text="{Binding Time}" Grid.Column="1"/>
 
 
-        <Button x:Name="addButton" Content="Add" Click="addButton_Click" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="1"/>
-        <Button x:Name="cancelButton" Content="Cancel" Click="cancelButton_Click" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="0"/>
+        <Button x:Name="addButton" Content="Add" Command="cmd:RoutedCommands.Confirm" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="1"/>
+        <Button x:Name="cancelButton" Content="Cancel" Command="cmd:RoutedCommands.Cancel" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="0"/>
     </Grid>
 </Window>
