--- a/WPF/Tablet/Views/GuideMainWindow.xaml
+++ b/WPF/Tablet/Views/GuideMainWindow.xaml
@@ -3,15 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:cmd="clr-namespace:BookingApp.WPF.Utils.Commands"
         xmlns:local="clr-namespace:BookingApp.WPF.Tablet.Views"
         mc:Ignorable="d"
         Title="Guide" Height="768" Width="1024" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Window.CommandBindings>
+        <CommandBinding Command="cmd:RoutedCommands.Profile" CanExecute="Profile_CanExecute" Executed="Profile_Executed"/>
+    </Window.CommandBindings>
     <DockPanel>
         <Grid DockPanel.Dock="Top" Background="Aqua">
             <Label Content="Booking App"/>
-            <Button HorizontalAlignment="Right" VerticalAlignment="Center" Padding="10 0 10 0" Margin="0,0,20,0" Click="Logout">
-                Profil
-            </Button>
+            <Button HorizontalAlignment="Right" Content="Profile" VerticalAlignment="Center" Padding="10 0 10 0" Margin="0,0,20,0" Command="cmd:RoutedCommands.Profile"/>
         </Grid>
         <Grid DockPanel.Dock="Bottom" Background="#696969">
 
