--- a/WPF/Tablet/Views/LiveTourPage.xaml
+++ b/WPF/Tablet/Views/LiveTourPage.xaml
@@ -3,11 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:cmd="clr-namespace:BookingApp.WPF.Utils.Commands"
       xmlns:local="clr-namespace:BookingApp.View.TabletView"
       mc:Ignorable="d" 
       d:DesignHeight="726" d:DesignWidth="1024"
       Title="LiveTourPage">
-
+    <Page.CommandBindings>
+        <CommandBinding x:Name="Finish" Command="cmd:RoutedCommands.Confirm" CanExecute="Finish_CanExecute" Executed="Finish_Executed"/>
+        <CommandBinding x:Name="CheckKeypoints" Command="cmd:RoutedCommands.AddPointOfInterest" CanExecute="CheckKeypoints_CanExecute" Executed="CheckKeypoints_Executed"/>
+    </Page.CommandBindings>
     <Grid Margin="0,10,0,10" Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -62,8 +66,8 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
-            <Button x:Name="checkButton" Grid.Row="2" Content="Check Next Keypoint" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="20" Click="checkButton_Click"/>
+            <Button x:Name="checkButton" Grid.Row="2" Content="Check Next Keypoint" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="20" Command="cmd:RoutedCommands.AddPointOfInterest"/>
         </Grid>
-        <Button Grid.ColumnSpan="2" Grid.Row="2" x:Name="finishButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Finish" Click="finishButton_Click"/>
+        <Button Grid.ColumnSpan="2" Grid.Row="2" x:Name="finishButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Finish" Command="cmd:RoutedCommands.Confirm"/>
     </Grid>
 </Page>
