--- a/WPF/Tablet/Views/TourPage.xaml
+++ b/WPF/Tablet/Views/TourPage.xaml
@@ -3,11 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:cmd="clr-namespace:BookingApp.WPF.Utils.Commands"
       xmlns:local="clr-namespace:BookingApp.WPF.Tablet.Views"
       mc:Ignorable="d"      
       d:DesignHeight="726" d:DesignWidth="1024"
       Title="TourPage">
-
+    <Page.CommandBindings>
+        <CommandBinding x:Name="Close" Command="cmd:RoutedCommands.Cancel" CanExecute="Close_CanExecute" Executed="Close_Executed"/>
+        <CommandBinding x:Name="Delete" Command="cmd:RoutedCommands.Confirm" CanExecute="Delete_CanExecute" Executed="Delete_Executed"/>
+    </Page.CommandBindings>
     <Grid Margin="0,10,0,10" Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -65,7 +69,7 @@
                 </DataGrid>
             </Grid>
         </Grid>
-        <Button Grid.Column="0" Grid.Row="2" x:Name="closeButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Close" Click="closeButton_Click"/>
-        <Button Grid.Column="1" Grid.Row="2" x:Name="deletehButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Delete" Click="deletehButton_Click"/>
+        <Button Grid.Column="0" Grid.Row="2" x:Name="closeButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Close" Command="cmd:RoutedCommands.Cancel"/>
+        <Button Grid.Column="1" Grid.Row="2" x:Name="deletehButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Delete" Command="cmd:RoutedCommands.Confirm"/>
     </Grid>
 </Page>
