--- a/WPF/Tablet/Views/TourReviewsPage.xaml
+++ b/WPF/Tablet/Views/TourReviewsPage.xaml
@@ -2,12 +2,15 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:cmd="clr-namespace:BookingApp.WPF.Utils.Commands"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.WPF.Tablet.Views"
       mc:Ignorable="d" 
       d:DesignHeight="726" d:DesignWidth="1024"
       Title="TourReviewsPage">
-
+    <Page.CommandBindings>
+        <CommandBinding x:Name="Close" Command="cmd:RoutedCommands.Cancel" CanExecute="Close_CanExecute" Executed="Close_Executed"/>
+    </Page.CommandBindings>
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -30,6 +33,6 @@
                 </ItemsControl>
             </ScrollViewer>
         </Border>
-        <Button x:Name="closeButton" Grid.Row="2" Content="Close" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10" Click="closeButton_Click"/>
+        <Button x:Name="closeButton" Grid.Row="2" Content="Close" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10" Command="cmd:RoutedCommands.Cancel"/>
     </Grid>
 </Page>
